<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3F7A4C"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="end"
        android:text="@string/date_update"
        android:textColor="@color/white"
        android:textSize="8sp"
        app:layout_constraintEnd_toEndOf="@+id/btn_update"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:drawableEnd="@drawable/ic_baseline_update_24"
        android:text="@string/date_update"
        app:backgroundTint="#2F4210"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="28sp"
        android:layout_marginTop="16dp"
        android:background="#4CA8BD"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_update">

        <TextView
            android:id="@+id/tv_char_code"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_weight="1.3"
            android:autoSizeTextType="uniform"
            android:gravity="start"
            android:text="Код" />

        <TextView
            android:id="@+id/tv_name"

            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_weight="0.95"
            android:autoSizeTextType="uniform"
            android:gravity="bottom|center"
            android:text="Наименование" />

        <TextView
            android:id="@+id/tv_nominal"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_weight="1.3"
            android:autoSizeTextType="uniform"
            android:gravity="center_horizontal"
            android:text="Номинал" />

        <TextView
            android:id="@+id/tv_value"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_weight="1.1"
            android:autoSizeTextType="uniform"
            android:gravity="center_horizontal"
            android:text="Стоимость" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:layout_marginBottom="24dp"
        android:background="#08E6DF"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:listitem="@layout/recycler_view_item" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/et_amount"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#D8C6C6"
            android:clickable="true"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"

            android:inputType="numberDecimal"
            android:text="@string/amount" />


        <TextView
            android:id="@+id/tv_char_ed_left"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.35"
            android:background="#D8C6C6"
            android:gravity="center"
            android:text="@string/tv_char_ed_left"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/sp_valute"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#9CA2C6"

            android:spinnerMode="dropdown" />


        <TextView
            android:id="@+id/tv_result_convert"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#CDC6C6"
            android:fontFamily="sans-serif-medium"
            android:text="@string/out_convert"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_char_ed_right"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.35"
            android:background="#D8C6C6"
            android:gravity="center"
            android:text="@string/tv_char_right"
            android:textSize="20sp" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>